[package]
name = "rust-spotlight"
version = "0.1.0"
authors = ["Joseph Rafael Ferrer <rafael2x0@gmail.com>"]
edition = "2018"

[lib]
name = "spotlight"
path = "src/lib.rs"

[[bin]]
name = "spotlight"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "~0.3", features = ["ntstatus", "winuser", "bcrypt"] }
chrono = "~0.4"